--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -4,13 +4,14 @@
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.eclipse.viatra.parent.all</artifactId>
-    <name>VIATRA Eclipse plug-in</name>
+    <name>The VIATRA Model Query and Transformation Framework</name>
     <version>1.6.0-SNAPSHOT</version>
     <url>http://eclipse.org/viatra</url>
     <packaging>pom</packaging>
     <modules>
         <module>../../releng/org.eclipse.viatra.target.rcp</module>
         <module>../../releng/org.eclipse.viatra.update</module>
+        <module>../../releng/org.eclipse.viatra.parent.core</module>
         <module>../../releng/org.eclipse.viatra.parent.incubation</module>
 
         <!-- Query -->
@@ -32,6 +33,8 @@
         <module>../../query/tests/org.eclipse.viatra.query.testing.snapshot.editor</module>
         <module>../../query/tests/org.eclipse.viatra.query.testing.core</module>
         <module>../../query/tests/org.eclipse.viatra.query.testing.ui</module>
+        <module>../../query/features/org.eclipse.viatra.query.runtime.feature</module>
+        <module>../../query/features/org.eclipse.viatra.query.language.feature</module>
         <module>../../query/features/org.eclipse.viatra.query.testing.sdk.feature</module>
         <module>../../query/features/org.eclipse.viatra.query.sdk.feature</module>
         <module>../../query/features/org.eclipse.viatra.query.tooling.debug.feature</module>
@@ -39,6 +42,7 @@
         <!-- Transformations -->
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.ui</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.evm.transactions</module>
+        <module>../../transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature</module>
         <module>../../transformation/features/org.eclipse.viatra.transformation.evm.transactions.feature</module>
 
         <!-- Addons -->
@@ -75,15 +79,9 @@
         <relativePath>../org.eclipse.viatra.parent/pom.xml</relativePath>
     </parent>
     <properties>
-        <core.repository.url>file:/${basedir}/../../releng/org.eclipse.viatra.update.core/target/repository</core.repository.url>
         <target.classifier>indigo</target.classifier>
     </properties>
     <repositories>
-        <repository>
-            <id>viatra.core</id>
-            <url>${core.repository.url}</url>
-            <layout>p2</layout>
-        </repository>
         <repository>
             <id>viatra.nexus</id>
             <url>https://repo.eclipse.org/content/groups/viatra/</url>
