--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -339,6 +339,23 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-p2-plugin</artifactId>
+                        <version>${tychoVersion}</version>
+                        <executions>
+                            <execution>
+                                <id>p2-metadata</id>
+                                <goals>
+                                    <goal>p2-metadata</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <defaultP2Metadata>false</defaultP2Metadata>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -408,6 +425,23 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-p2-plugin</artifactId>
+                        <version>${tychoVersion}</version>
+                        <executions>
+                            <execution>
+                                <id>p2-metadata</id>
+                                <goals>
+                                    <goal>p2-metadata</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <defaultP2Metadata>false</defaultP2Metadata>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -479,6 +513,23 @@
                             </execution>
                         </executions>
                     </plugin>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-p2-plugin</artifactId>
+						<version>${tychoVersion}</version>
+						<executions>
+							<execution>
+								<id>p2-metadata</id>
+								<goals>
+									<goal>p2-metadata</goal>
+								</goals>
+								<phase>package</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<defaultP2Metadata>false</defaultP2Metadata>
+						</configuration>
+					</plugin>
                 </plugins>
             </build>
             </profile>
