--- a/releng/org.eclipse.viatra.parent.dse/pom.xml
+++ b/releng/org.eclipse.viatra.parent.dse/pom.xml
@@ -14,6 +14,7 @@
         <module>../../dse/plugins/org.eclipse.viatra.dse</module>
         <module>../../dse/plugins/org.eclipse.viatra.dse.genetic</module>
         <module>../../maven/viatra-dse-runtime</module>
+        <module>../org.eclipse.viatra.parent.core</module>
 
     </modules>
     <parent>
