[517195] Fixing maven build

--- a/releng/org.eclipse.viatra.parent.dse/pom.xml
+++ b/releng/org.eclipse.viatra.parent.dse/pom.xml
@@ -35,4 +35,18 @@
             </snapshots>
         </repository>
     </repositories>
+    <profiles>
+        <profile>
+            <id>sign_milestone</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>standalone</name>
+                </property>
+            </activation>
+            <modules>
+                <module>../org.eclipse.viatra.parent.core</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
