[releng] Adding missing files to the build
Change-Id: I424f3a884e573b39b50ab878eda547f96628b05f
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -3,4 +3,7 @@ bin.includes = META-INF/,\
                html/,\
                tutorial.toc.xml,\
                viatra.toc.xml,\
-               org.eclipse.viatra.documentation.help.contexts.xml
+               org.eclipse.viatra.documentation.help.contexts.xml,\
+               build.properties,\
+               about.html
+src.includes = about.html
