--- a/addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.runtime.validation/build.properties
+++ b/addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.runtime.validation/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               fragment.xml
+               fragment.xml,\
+               build.properties,\
+               about.html
+src.includes = about.html
