--- a/addon/features/org.eclipse.viatra.addon.querybasedfeatures.runtime.feature/build.properties
+++ b/addon/features/org.eclipse.viatra.addon.querybasedfeatures.runtime.feature/build.properties
@@ -1,3 +1,5 @@
 bin.includes = feature.xml,\
-               build.properties,\
+               license.html,\
+               feature.properties
+src.includes = feature.properties,\
                license.html
