--- a/addon/features/org.eclipse.viatra.addon.validation.runtime.feature/build.properties
+++ b/addon/features/org.eclipse.viatra.addon.validation.runtime.feature/build.properties
@@ -1,3 +1,5 @@
 bin.includes = feature.xml,\
                license.html,\
-               epl-v10.html
+               feature.properties
+src.includes = license.html,\
+               feature.properties
