--- a/integration/features/org.eclipse.viatra.integration.evm.jdt.feature/build.properties
+++ b/integration/features/org.eclipse.viatra.integration.evm.jdt.feature/build.properties
@@ -1,3 +1,5 @@
 bin.includes = feature.xml,\
-               epl-v10.html,\
-               license.html
+               license.html,\
+               feature.properties
+src.includes = license.html,\
+               feature.properties
