--- a/integration/features/org.eclipse.viatra.integration.uml.feature/build.properties
+++ b/integration/features/org.eclipse.viatra.integration.uml.feature/build.properties
@@ -1,3 +1,6 @@
 bin.includes = feature.xml,\
                epl-v10.html,\
-               license.html
+               license.html,\
+               feature.properties
+src.includes = feature.properties,\
+               epl-v10.html
