--- a/query/features/org.eclipse.viatra.query.runtime.feature/build.properties
+++ b/query/features/org.eclipse.viatra.query.runtime.feature/build.properties
@@ -1,4 +1,6 @@
 bin.includes = feature.xml,\
                epl-v10.html,\
                license.html,\
-               build.properties
+               build.properties,\
+               feature.properties
+src.includes = feature.properties
