--- a/query/features/org.eclipse.viatra.query.sdk.feature/build.properties
+++ b/query/features/org.eclipse.viatra.query.sdk.feature/build.properties
@@ -3,3 +3,4 @@ bin.includes = feature.xml,\
                license.html,\
                build.properties,\
                feature.properties
+src.includes = license.html
