--- a/query/features/org.eclipse.viatra.query.tooling.debug.feature/build.properties
+++ b/query/features/org.eclipse.viatra.query.tooling.debug.feature/build.properties
@@ -1,4 +1,6 @@
-bin.includes = feature.xml,\
-               epl-v10.html,\
+bin.includes = epl-v10.html,\
                license.html,\
-               build.properties
+               build.properties,\
+               feature.xml,\
+               feature.properties
+src.includes = feature.properties
