[releng] Consider packed artifacts in target platforms

--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -54,6 +54,7 @@
                         </artifact>
                         <dependency-resolution>
                         <extraRequirements>
+                            <includePackedArtifacts>true</includePackedArtifacts>
                             <requirement>
                                 <type>eclipse-plugin</type>
                                 <id>com.google.inject.multibindings</id>
