--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -103,6 +103,7 @@
                 <artifactId>target-platform-configuration</artifactId>
                 <version>${tycho.version}</version>
                 <configuration>
+                    <includePackedArtifacts>true</includePackedArtifacts>
                     <resolver>p2</resolver>
                     <target>
                         <artifact>
