[releng] Explicitly define phase for pack200 tasks as verify
The hope is this will also sign source features this way

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -293,7 +293,7 @@
                                 <goals>
                                     <goal>normalize</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -317,7 +317,7 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                             </execution>
                         </executions>
                     </plugin>
@@ -331,7 +331,7 @@
                                 <goals>
                                     <goal>pack</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -351,7 +351,7 @@
                                 <goals>
                                     <goal>p2-metadata</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                             </execution>
                         </executions>
                         <configuration>
@@ -382,7 +382,7 @@
                                 <goals>
                                     <goal>normalize</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -406,7 +406,7 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                             </execution>
                         </executions>
                     </plugin>
@@ -420,7 +420,7 @@
                                 <goals>
                                     <goal>pack</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -440,7 +440,7 @@
                                 <goals>
                                     <goal>p2-metadata</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                             </execution>
                         </executions>
                         <configuration>
@@ -471,7 +471,7 @@
                                 <goals>
                                     <goal>normalize</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -495,7 +495,7 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                             </execution>
                         </executions>
                     </plugin>
@@ -509,7 +509,7 @@
                                 <goals>
                                     <goal>pack</goal>
                                 </goals>
-                                <phase>package</phase>
+                                <phase>verify</phase>
                                 <configuration>
                                     <supportedProjectTypes>
                                         <supportedProjectType>eclipse-plugin</supportedProjectType>
@@ -529,7 +529,7 @@
 								<goals>
 									<goal>p2-metadata</goal>
 								</goals>
-								<phase>package</phase>
+								<phase>verify</phase>
 							</execution>
 						</executions>
 						<configuration>
