--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -7,3 +7,14 @@ bin.includes = META-INF/,\
                build.properties,\
                about.html
 src.includes = about.html
+bin.excludes = html/cps/images/raw/,\
+               html/cps/asciidoctor.css,\
+               html/cps/coderay-asciidoctor.css,\
+               html/.gitignore,\
+               html/extra/asciidoctor.css,\
+               html/extra/coderay-asciidoctor.css,\
+               html/language/asciidoctor.css,\
+               html/language/coderay-asciidoctor.css,\
+               html/tutorial/asciidoctor.css,\
+               html/tutorial/coderay-asciidoctor.css,\
+               html/basic-theme.yml
