--- a/documentation/org.eclipse.viatra.documentation.help/plugin.xml
+++ b/documentation/org.eclipse.viatra.documentation.help/plugin.xml
@@ -9,8 +9,13 @@
             primary="true">
       </toc>
       <toc
-            extradir="tutorial"
+            extradir="html/tutorial"
             file="tutorial.toc.xml"
+            primary="false">
+      </toc>
+      <toc
+            extradir="html/cps"
+            file="cps.toc.xml"
             primary="false">
       </toc>
    </extension>
