--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -5,16 +5,17 @@ bin.includes = META-INF/,\
                viatra.toc.xml,\
                org.eclipse.viatra.documentation.help.contexts.xml,\
                build.properties,\
-               about.html
+               about.html,\
+               cps.toc.xml
 src.includes = about.html
 bin.excludes = html/cps/images/raw/,\
                html/cps/asciidoctor.css,\
                html/cps/coderay-asciidoctor.css,\
                html/.gitignore,\
-               html/extra/asciidoctor.css,\
-               html/extra/coderay-asciidoctor.css,\
                html/language/asciidoctor.css,\
                html/language/coderay-asciidoctor.css,\
                html/tutorial/asciidoctor.css,\
                html/tutorial/coderay-asciidoctor.css,\
-               html/basic-theme.yml
+               html/basic-theme.yml,\
+               html/extra/,\
+               html/tutorial/tutorial.html
