--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -95,6 +95,15 @@
     </repositories>
     <build>
         <plugins>
+           <plugin>
+               <groupId>org.eclipse.tycho</groupId>
+               <artifactId>tycho-versions-plugin</artifactId>
+               <version>${tycho.version}</version>
+               <configuration>
+                 <artifacts>${project.artifactId},org.eclipse.viatra.parent.core</artifacts>
+                 <properties>viatra.incubation.version</properties>
+               </configuration>
+           </plugin>
             <plugin>
               <artifactId>maven-toolchains-plugin</artifactId>
             </plugin>
