--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -95,15 +95,10 @@
     </repositories>
     <build>
         <plugins>
-           <plugin>
+            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
-               <version>${tycho.version}</version>
-               <configuration>
-                 <artifacts>${project.artifactId},org.eclipse.viatra.parent.core</artifacts>
-                 <properties>viatra.incubation.version</properties>
-               </configuration>
-           </plugin>
+            </plugin>
             <plugin>
               <artifactId>maven-toolchains-plugin</artifactId>
             </plugin>
@@ -134,5 +129,18 @@
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+	            <plugin>
+	               <groupId>org.eclipse.tycho</groupId>
+	               <artifactId>tycho-versions-plugin</artifactId>
+	               <version>${tycho.version}</version>
+	               <configuration>
+	                 <artifacts>${project.artifactId},org.eclipse.viatra.parent.core</artifacts>
+	                 <properties>viatra.main.version</properties>
+	               </configuration>
+	           </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
