--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -69,12 +69,20 @@
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
                 <artifactId>tycho-versions-plugin</artifactId>
-                <version>${tycho.version}</version>
-                <configuration>
-                  <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core</artifacts>
-                  <properties>viatra.main.version</properties>
-                </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+               <plugin>
+                   <groupId>org.eclipse.tycho</groupId>
+                   <artifactId>tycho-versions-plugin</artifactId>
+                   <version>${tycho.version}</version>
+                   <configuration>
+                     <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core</artifacts>
+                     <properties>viatra.main.version</properties>
+                   </configuration>
+               </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
