[releng] Further set-version updates

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -136,7 +136,7 @@
 	               <artifactId>tycho-versions-plugin</artifactId>
 	               <version>${tycho.version}</version>
 	               <configuration>
-	                 <artifacts>${project.artifactId},org.eclipse.viatra.parent.core</artifacts>
+	                 <artifacts>${project.artifactId},org.eclipse.viatra.parent.core,org.eclipse.viatra.parent</artifacts>
 	                 <properties>viatra.main.version</properties>
 	               </configuration>
 	           </plugin>
