Adding back jacoco configuration mistakenly removed with parent.analysis

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -80,6 +80,9 @@
     </parent>
     <properties>
         <target.classifier>indigo</target.classifier>
+        <!-- Sonar -->
+        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+        <sonar.jacoco.reportPath>${jacoco.targetdir}/jacoco.exec</sonar.jacoco.reportPath>
     </properties>
     <repositories>
         <repository>
