[518791] Reduced memory footprint using Eclipse Collections
Change-Id: Ibe9cc832f8fbf7d7d1f978d4698482010b9a5c1f
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=518791
Signed-off-by: bergmann <bergmann@mit.bme.hu>
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/maven/viatra-query-runtime/pom.xml
+++ b/maven/viatra-query-runtime/pom.xml
@@ -91,6 +91,16 @@
             <artifactId>guava</artifactId>
             <version>[14.0,19.0)</version>
         </dependency>
+        <dependency>
+			<groupId>org.eclipse.collections</groupId>
+			<artifactId>eclipse-collections</artifactId>
+			<version>7.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.collections</groupId>
+			<artifactId>eclipse-collections-api</artifactId>
+			<version>7.1.1</version>
+		</dependency>
     </dependencies>
     <parent>
         <artifactId>org.eclipse.viatra.parent.core</artifactId>
