--- a/releng/org.eclipse.viatra.docs/pom.xml
+++ b/releng/org.eclipse.viatra.docs/pom.xml
@@ -12,7 +12,8 @@
     <artifactId>org.eclipse.viatra.docs</artifactId>
     <packaging>eclipse-plugin</packaging>
     <properties>
-       <target.classifier>luna</target.classifier>
+        <target.classifier>luna</target.classifier>
+        <java.version>1.8</java.version>
     </properties>
     <build>
   <plugins>
