--- a/releng/org.eclipse.viatra.docs/build.properties
+++ b/releng/org.eclipse.viatra.docs/build.properties
@@ -5,17 +5,6 @@ platform:/plugin/org.eclipse.viatra.addon.querybasedfeatures.runtime,\
 platform:/plugin/org.eclipse.viatra.addon.validation.core,\
 platform:/plugin/org.eclipse.viatra.addon.validation.runtime,\
 platform:/plugin/org.eclipse.viatra.addon.validation.runtime.ui,\
-platform:/plugin/org.eclipse.viatra.addon.viewers.runtime,\
-platform:/plugin/org.eclipse.viatra.addon.viewers.runtime.zest,\
-platform:/plugin/org.eclipse.viatra.cep.core,\
-platform:/plugin/org.eclipse.viatra.cep.core.metamodels,\
-platform:/plugin/org.eclipse.viatra.cep.emf.notification,\
-platform:/plugin/org.eclipse.viatra.cep.tooling.core,\
-platform:/plugin/org.eclipse.viatra.cep.vepl,\
-platform:/plugin/org.eclipse.viatra.dse,\
-platform:/plugin/org.eclipse.viatra.dse.genetic,\
-platform:/plugin/org.eclipse.viatra.integration.mwe2,\
-platform:/plugin/org.eclipse.viatra.integration.uml,\
 platform:/plugin/org.eclipse.viatra.query.patternlanguage,\
 platform:/plugin/org.eclipse.viatra.query.patternlanguage.emf,\
 platform:/plugin/org.eclipse.viatra.query.runtime,\
@@ -25,9 +14,6 @@ platform:/plugin/org.eclipse.viatra.query.runtime.localsearch,\
 platform:/plugin/org.eclipse.viatra.query.runtime.matchers,\
 platform:/plugin/org.eclipse.viatra.query.runtime.rete,\
 platform:/plugin/org.eclipse.viatra.query.runtime.rete.recipes,\
-platform:/plugin/org.eclipse.viatra.transformation.runtime.debug,\
 platform:/plugin/org.eclipse.viatra.transformation.evm,\
 platform:/plugin/org.eclipse.viatra.transformation.evm.transactions,\
-platform:/plugin/org.eclipse.viatra.transformation.runtime.emf,\
-platform:/plugin/org.eclipse.viatra.transformation.runtime.tracer,\
-platform:/plugin/org.eclipse.viatra.transformation.views
+platform:/plugin/org.eclipse.viatra.transformation.runtime.emf
