[releng] Fixed javadoc generation
The generation of javadoc failed because of some included projects (e.g. GEF5 Zest integration) relied on Java 8 features. By making this project require Java 8 this issue is fixed.

Change-Id: Ie848d7f5bc4668dcda2c1ebc0e9c90fbe3e8f476
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.docs/pom.xml
+++ b/releng/org.eclipse.viatra.docs/pom.xml
@@ -13,6 +13,7 @@
     <packaging>eclipse-plugin</packaging>
     <properties>
        <target.classifier>luna</target.classifier>
+       <java.version>1.8</java.version>
     </properties>
     <build>
   <plugins>
