[519604] Replaced generated ecore models for patternlanguage
This also allowed the removal of the patternlanguage.generator project.

Change-Id: I895b1e7e45333ffc4a164192375ef7d684621761
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/build.properties
@@ -1,6 +1,7 @@
 source.. = src/,\
-          src-gen/,\
-          xtend-gen/
+           src-gen/,\
+           xtend-gen/,\
+           emf-gen/
 bin.includes = model/,\
                META-INF/,\
                .,\
@@ -11,4 +12,10 @@ jars.extra.classpath = platform:/plugin/org.eclipse.emf.mwe2.launch,\
                        platform:/plugin/org.eclipse.emf.codegen.ecore,\
                        platform:/plugin/org.eclipse.xtext.generator
 src.includes = about.html
-                       
+additional.bundles = org.antlr.runtime,\
+                     org.objectweb.asm,\
+                     org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib,\
+                     org.eclipse.xtext.generator,\
+                     org.eclipse.xtext.xtext.generator,\
+                     org.apache.commons.logging
