--- a/query/plugins/org.eclipse.viatra.query.patternlanguage/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage/build.properties
@@ -1,6 +1,7 @@
 source.. = src/,\
-          src-gen/,\
-          xtend-gen/
+           src-gen/,\
+           xtend-gen/,\
+           emf-gen/
 bin.includes = model/,\
                META-INF/,\
                .,\
@@ -17,5 +18,6 @@ additional.bundles = org.antlr.runtime,\
                      org.eclipse.emf.mwe2.launch,\
                      org.eclipse.emf.mwe2.lib,\
                      org.eclipse.xtext.generator,\
-                     org.eclipse.viatra.query.patternlanguage.generator,\
-                     org.eclipse.xtext.xtext.generator
+                     org.eclipse.xtext.xtext.generator,\
+                     org.apache.commons.logging
+
