[519604] Use new Xtext language generator in pattern language
Parser and pattern editor tests had to be migrated to new apis to make
content assist test work again. Annotation validator tests moved to ui
tests because of dependency on UI injector.

Change-Id: I89cc8c1d038951b2482ee9d99cc1c0902680f500
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/build.properties
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/build.properties
@@ -1,6 +1,7 @@
 source.. = src/,\
            xtend-gen/,\
-           emf-gen/
+           emf-gen/,\
+           src-gen/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
