--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/build.properties
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/build.properties
@@ -1,5 +1,6 @@
 source.. = src/,\
-           xtend-gen/
+           xtend-gen/,\
+           src-gen/
 bin.includes = META-INF/,\
                .,\
                about.html
