--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -10,7 +10,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.ide</module>
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ide</module>
         <module>../../query/plugins/org.eclipse.viatra.query.runtime</module>
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.matchers</module>
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.base</module>
