--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/plugin.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><?eclipse version="3.4"?><plugin>
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <!-- @generated notation -->
-      <package
-            class="org.eclipse.viatra.addon.viewers.runtime.notation.NotationPackage"
-            genModel="model/notation.genmodel"
-            uri="http://www.eclipse.org/viatra/addon/viewers/notation/1.0"/>
-   </extension>
+  <extension point="org.eclipse.emf.ecore.generated_package">
+    <!-- @generated notation -->
+    <package class="org.eclipse.viatra.addon.viewers.runtime.notation.NotationPackage" genModel="model/notation.genmodel" uri="http://www.eclipse.org/viatra/addon/viewers/notation/1.0"/>
+  </extension>
   <extension id="org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries" id="org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries">
       <query-specification fqn="org.eclipse.viatra.addon.viewers.runtime.model.patterns.param2item"/>
