--- a/maven/viatra-dse-runtime/pom.xml
+++ b/maven/viatra-dse-runtime/pom.xml
@@ -5,10 +5,10 @@
     <name>VIATRA Design Space Exploration Runtime (Incubation)</name>
 
     <parent>
-        <artifactId>org.eclipse.viatra.parent.dse</artifactId>
+        <artifactId>org.eclipse.viatra.parent.incubation.maven</artifactId>
         <groupId>org.eclipse.viatra</groupId>
         <version>0.17.0-SNAPSHOT</version>
-        <relativePath>../../releng/org.eclipse.viatra.parent.dse/pom.xml</relativePath>
+        <relativePath>../../releng/org.eclipse.viatra.parent.incubation.maven/pom.xml</relativePath>
     </parent>
 
     <properties>
