--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
@@ -13,5 +13,6 @@
     <packaging>eclipse-plugin</packaging>
     <properties>
        <target.classifier>luna</target.classifier>
+       <java.version>1.8</java.version>
     </properties>
 </project>
