--- a/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/pom.xml
@@ -13,5 +13,6 @@
     <packaging>eclipse-plugin</packaging>
     <properties>
        <target.classifier>luna</target.classifier>
+       <java.version>1.8</java.version>
     </properties>
 </project>
